Fix sidebar width when closed on mobile

--- a/style.css
+++ b/style.css
@@ -149,6 +149,8 @@ article {
     }
 
     #sidebar[open="false"] {
+        width: 5%;
+
         button {
             width: 100%;
         }
